# update-Portfolio

./: .gitignore  SETUP_GUIDE.md  constraints.txt  netlify.toml  package-lock.json  package.json  tsconfig.tsbuildinfo  vercel.json  vite.config.ts
backend/: main.py  pyproject.toml  requirements.txt
src/: styles.css
src/components/: AIHub.tsx  Hero.tsx  Navbar.tsx  Particles.tsx  Sections.tsx
src/routes/: index.tsx
