[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "certifi==2026.5.20",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "click==8.4.1",
    "colorama==0.4.6",
    "cryptography==48.0.0",
    "distro==1.9.0",
    "fastapi==0.136.3",
    "google-auth==2.53.0",
    "google-genai==2.6.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.16",
    "jiter==0.15.0",
    "openai==2.38.0",
    "pyasn1==0.6.3",
    "pyasn1-modules==0.4.2",
    "pycparser==3.0",
    "pydantic[email]==2.13.4",
    "pydantic-core==2.46.4",
    "python-dotenv==1.2.2",
    "requests==2.34.2",
    "resend>=2.30.1",
    "sniffio==1.3.1",
    "starlette==1.1.0",
    "tenacity==9.1.4",
    "tqdm==4.67.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.7.0",
    "uvicorn==0.48.0",
    "websockets==16.0",
]
